Cherry-pick 7e8fe9be9b22. rdar://problem/103539559

threejs.org renders mostly blank (lazy image loading inside 0-height inline is broken?)
    https://bugs.webkit.org/show_bug.cgi?id=246060
    rdar://99905638

    Reviewed by Antti Koivisto.

    This part of the "inline level box affects the line box height" logic is a leftover from when
    we used the notion of "setIsNonEmpty" to decide if an inline level box should be taken into account
    at line box sizing (see webkit.org/b/218767 216957 and 220232).
    However with the most recent "layout bounds" approach, ignoring "empty" atomic inline level boxes is incorrect.
    While an inline level box with zero height produces the layout bounds of (0, 0), it may still put constraint on
    the line box when a non-normal "line-height" triggers negative layout bounds on the inline boxes (most notably on the root inline box).
    (Like in this case the root inline box ends up with the layout bounds of [5, -5] (triggered by line-height: 0) but
    merging it with the <img>'s [0, 0] layout bounds will still produce a 5px tall line box).

    * LayoutTests/fast/text/line-height-zero-with-inline-level-content-expected.html: Added.
    * LayoutTests/fast/text/line-height-zero-with-inline-level-content.html: Added.
    * Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.cpp:
    (WebCore::Layout::InlineFormattingGeometry::inlineLevelBoxAffectsLineBox const):

    Canonical link: https://commits.webkit.org/257565@main

Canonical link: https://commits.webkit.org/252432.1002@safari-7614-branch